# stspin-bldc-rs

./: Cargo.toml  README.md  alternate_speed.py  cmd.py  openocd.cfg
.cargo/: config.toml
src/: commute.rs  main.rs  parser.rs  periodic_timer.rs  serial.rs
