[package]
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
edition = "2018"
readme = "README.md"
name = "spincontrol"
version = "0.1.0"

[dependencies]
cast = "0.3.0"
cortex-m = "0.6.0"
cortex-m-rtic = "1.1.2"
cortex-m-semihosting = "0.3.3"
heapless = "0.7.13"
libm = "0.2.2"
panic-semihosting = "0.6.0"
stm32f0xx-hal = { version = "0.18", features = ["stm32f031"]}
systick-monotonic = "*"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"



# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f0]
features = ["stm32f0x1", "rt"]
version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "spincontrol"
test = false
bench = false


[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z" 

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 2
